--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
+    "firebase": "^9.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-custom-scroll": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
+    "short-uuid": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
